--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,7 @@ requirements:
   run:
     - python
     - mdurl >=0.1,<1
-    - typing_extensions >=3.7.4
+    - typing_extensions >=3.7.4   # [py37]
 
 test:
   requires:
