--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -49,6 +49,7 @@ about:
   license_file: LICENSE
   description: |
     Python port of markdown-it. Markdown parsing, done right!
+  summary: Python port of markdown-it. Markdown parsing, done right!
   doc_url: https://github.com/ExecutableBookProject/markdown-it-py/blob/master/README.md
   dev_url: https://github.com/ExecutableBookProject/markdown-it-py
 
